# spacex_etl_pipeline

./: .coverage  .coveragerc  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  364730  364730.pub  Dockerfile  Dockerfile.airflow  Dockerfile.dbt  Dockerfile.metabase-setup  Dockerfile.metabase_setup  LICENSE  Makefile  README.md  check_conn.py  check_data.py  check_db.py  coverage.xml  docker-compose.docs.yml  docker-compose.yml  inspect_schema.py  main.py  manifesto.json  metabase_setup.py  pyproject.toml  pytest.ini  requirements.txt  script.py  spacex.db  test.ipynb  validate_pipeline.py  views.ipynb
.github/workflows/: cd.yml  ci-cd.yml  ci.yml  pipeline.yml
alembic/: alembic.ini  env.py
analytics/: dashboard.ipynb
config/: endpoints.py  settings.yaml
dags/: spacex_etl_dag.py
data/: spacex.db  spacex_etl.db
data/database/: spacex_prod.db
data/raw/: ships_20260213_014118.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/: sources.yml
dbt_spacex/: .user.yml  Dockerfile.dbt  dbt_project.yml  packages.yml  profiles.yml
dbt_spacex/docs/: Dockerfile.docs  nginx.conf
dbt_spacex/models/: schema.yml
dbt_spacex/tests/: assert_launch_date_after_solar_event.sql
docs/diagrams_src/: dependencies.mmd  er_model.mmd  etl_flow.mmd  prefect_flow.mmd
docs/schemas/: launches_schema.md  rockets_schema.md  ships_schema.md
ingestion_engine/tests/: conftest.py  test_api_client.py  test_api_extractor.py  test_ingestion.py  test_ingestion_quality.py  test_main.py
ingestion_engine/utils/: api_client.py
models/gold/: gold_rocket_performance.sql
scripts/: generate_docs.ps1  generate_docs.sh  health_check.ps1  init_db.sql  test_pipeline_completo.sh
src/: app.py  logger.py  main.py  settings.py
src/application/: entity_config.py  entity_schema.py  etl_factory.py  etl_service.py
src/config/: config.py  schema_registry.py  settings.py  settings.yaml
src/database/: models.py
src/db/: base.py  database.py  models_factory.py  schema.py  session.py
src/domain/: Interfaces.py
src/extract/: base.py  base_extractor.py  client.py  extract.py  extractor.py  factory.py  launches.py  rockets.py  schemas.py  spacex_api.py
src/extractors/: concrete_extractors.py
src/flows/: data_quality.py  etl_flow.py  flows.py  spacex_etl.py  tasks.py
src/interfaces/: extractor_interface.py
src/load/: load.py  loader.py
src/loaders/: __init__.py  base.py  bronze_loader.py  local_loader.py  postgres_loader.py  schema_validator.py  silver_loader.py  watermark.py
src/models/: schema_factory.py  schemas.py
src/script/: init_db.sql
tests/: conftest.py  pytest.ini  test_alert_service.py  test_connection.py  test_data_quality.py  test_dbt_tools.py  test_extract.py  test_flow.py  test_gold_kpi.py  test_ingestion_quality.py  test_integration_database.py  test_load.py  test_loader.py  test_logging.py  test_main.py  test_metrics_service.py  test_monitoring.py  test_schemas.py  test_transform.py
(+81 files in other folders)
