[project]
name = "spacex-etl-pipeline"
version = "1.0.0"
description = "Pipeline ETL Medallion com Prefect, Polars e Postgres"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ricson Ramos" }]
dependencies = [
    "prefect>=3.0.0",
    "polars[rtcompat]>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.2.0",
    "structlog>=24.1.0",
    "requests>=2.31.0",
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]