[project]
name = "spacex-etl-pipeline"
version = "1.0.0"
description = "Pipeline ETL Medallion com Prefect, Polars e Postgres"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Ricson Ramos" }]
dependencies = [
    # Core Orchestration & API
    "prefect>=3.0.0,<3.6.0",
    "prefect-slack>=0.2.0",
    "requests>=2.32.0",
    "pydantic==2.7.0",
    "pydantic-settings>=2.2.1",
    "pandas>=2.1.1",

    # Data Engine
    "polars-lts-cpu==0.20.10",
    "pyarrow>=15.0.0",
    "connectorx>=0.3.2",
    "sqlalchemy==2.0.28",
    "psycopg[binary]>=3.1.0",

    # Transformation (DBT)
    "dbt-core>=1.7.10",
    "dbt-postgres>=1.7.10",

    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.21.0",

    # Testing
    "pytest>=8.1.1"
]

[dependency-groups]
dev = [
    "pytest-mock==3.14.0",
    "ruff>=0.3.0"
]

[tool.uv]
managed = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "I", "C90", "B"]
lint.ignore = ["D100"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]